# ReClip

./: CHANGELOG.md  NEXT_STEPS.md  feature_ideas.md  implementation_plan.md  legacy_analysis.md  readme.md  release.ps1  stack_comparison.md  task.md  tech_stack.md  walkthrough.md
.github/workflows/: publish-packages.yml  release.yml
flatpak/: com.reclip.app.yml
legacy resource/: SQLiteHelperClass.cs
reclip-app/: index.html  package-lock.json  package.json  package.json.bak
reclip-app/src/: App.css  App.tsx  QuickView.tsx  main.tsx  types.ts
reclip-app/src-tauri/: Cargo.toml  build_error.txt  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_errors_4.txt  build_errors_5.txt  build_errors_6.txt  check_log.txt  check_output.txt  error_log.txt  tauri.conf.json  tauri.conf.json.bak
reclip-app/src-tauri/capabilities/: default.json
reclip-app/src-tauri/icons/: icon.icns
reclip-app/src-tauri/migrations/: 20260115000000_create_clips_table.sql  20260117140000_add_favorite_column.sql  20260117150000_create_privacy_rules.sql  20260117160000_create_settings_table.sql  20260117170000_create_templates.sql  20260118000000_add_sensitive_position.sql  20260118120000_create_snippets_table.sql  20260118150000_add_snippet_advanced_fields.sql
reclip-app/src-tauri/src/: api.rs  clip_cmds.rs  clipboard.rs  crypto.rs  db.rs  drive.rs  lib.rs  main.rs  maintenance_cmds.rs  ocr.rs  screen_cmds.rs  settings_cmds.rs  snippet_cmds.rs  system_cmds.rs  tray.rs  update.rs  window_cmds.rs  workflow_cmds.rs
reclip-app/src/components/: BulkActionsBar.css  BulkActionsBar.tsx  CaptureOverlay.css  CaptureOverlay.tsx  ChangelogViewer.tsx  ClipCard.css  (+27 more)
snap/: snapcraft.yaml
(+18 files in other folders)
