[package]
name = "reclip-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reclip_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6.1"
rdev = "0.5.3"
log = "0.4.29"
env_logger = "0.11.8"
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tauri-plugin-global-shortcut = "2.3.1"
image = "0.25.9"
tauri-plugin-fs = "2.4.5"
enigo = "0.6.1"
zip = "0.6"
walkdir = "2.5"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
html-escape = "0.2"
x-win = "5.4.0"
tauri-plugin-autostart = "2"
clap = { version = "4", features = ["derive"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Media_Ocr", "Globalization", "Graphics_Imaging", "Storage_Streams", "Foundation"] }
winreg = "0.52"
clipboard-rs = "0.3.1"

